# cslibs_mapping

./: CMakeLists.txt  README.md  assets.md  package.xml  plugin_description.xml  plugins.xml  plugins_ndt.xml  plugins_ondt.xml  plugins_oru.xml
bag/: wget.sh
cmake/: FindLibBoard.cmake  cslibs_mapping_eigen_cpu_flags.cmake  cslibs_mapping_enable_c++17.cmake  cslibs_mapping_extras.cmake  cslibs_mapping_openmp.cmake
config/: cartographer_2d.lua  example.rviz  rawseeds.rviz  sand.rviz  sand_robot_model.rviz
include/cslibs_mapping/mapper/: mapper.hpp  ndt_grid_mapper_2d.h  ndt_grid_mapper_3d.h  occupancy_grid_mapper_2d.h  occupancy_ndt_grid_mapper_2d.h  occupancy_ndt_grid_mapper_3d.h  octomap_mapper_3d.h  save_map.hpp
include/cslibs_mapping/maps/: distribution_height_map_2d.hpp  map.h  map.hpp  map_template.hpp  min_height_map_2d.hpp  min_max_height_map_2d.hpp  ndt_grid_map_2d.h  ndt_grid_map_2d.hpp  ndt_grid_map_3d.h  ndt_grid_map_3d.hpp  occupancy_grid_map_2d.h  occupancy_grid_map_2d.hpp  occupancy_grid_map_3d.h  occupancy_grid_map_3d.hpp  occupancy_ndt_grid_map_2d.h  occupancy_ndt_grid_map_2d.hpp  occupancy_ndt_grid_map_3d.h  occupancy_ndt_grid_map_3d.hpp  oru_ndt_grid_map_3d.hpp
include/cslibs_mapping/measurement/: measurement.hpp
include/cslibs_mapping/publisher/: publisher.hpp
launch/: cartographer.launch  cartographer_offline.launch  create_bag_with_tf.launch  example.launch  laser.launch  maize.launch  octomap.launch  rawseeds.launch  rawseeds_0-2.launch  rawseeds_3d.launch  rawseeds_3d_load.launch  rawseeds_float.launch  sand.launch  sand_height.launch  sand_summit_xl.launch
msg/: Distribution3d.msg  Distribution3dArray.msg  Distributions3d.msg
res/: unit_circles.mesh  unit_sphere.mesh
scripts/: log_trajectory.py  plot_trajectory_in_map_2d.py  render_map_with_trajectory.py
src/mapper/: distribution_height_mapper_2d.cpp  distribution_height_mapper_2d.h  min_height_mapper_2d.cpp  min_height_mapper_2d.h  min_max_height_mapper_2d.cpp  min_max_height_mapper_2d.h  ndt_grid_mapper_2d.cpp  ndt_grid_mapper_2d.h  ndt_grid_mapper_3d.cpp  ndt_grid_mapper_3d.h  occupancy_grid_mapper_2d.cpp  occupancy_grid_mapper_2d.h  occupancy_grid_mapper_3d.cpp  occupancy_grid_mapper_3d.h  occupancy_ndt_grid_mapper_2d.cpp  occupancy_ndt_grid_mapper_2d.h  occupancy_ndt_grid_mapper_3d.cpp  occupancy_ndt_grid_mapper_3d.h  octomap_mapper_3d.cpp  oru_ndt_grid_mapper_2d.cpp  oru_ndt_grid_mapper_2d.h  oru_ndt_grid_mapper_3d.cpp  oru_ndt_grid_mapper_3d.h  oru_ndt_om_grid_mapper_2d.cpp  oru_ndt_om_grid_mapper_2d.h  oru_ndt_om_grid_mapper_3d.cpp  oru_ndt_om_grid_mapper_3d.h  oru_ndt_omfg_grid_mapper_2d.cpp  oru_ndt_omfg_grid_mapper_2d.h  oru_ndt_omfg_grid_mapper_3d.cpp  oru_ndt_omfg_grid_mapper_3d.h
src/nodes/: mapper_node_2d.cpp  mapper_node_2d.h  mapper_node_3d.cpp  mapper_node_3d.h  mapping_node.cpp  mapping_node.h  offline_mapper_node_2d.cpp  offline_mapper_node_2d.h  offline_mapper_node_3d.cpp  offline_mapper_node_3d.h  viewer_node_3d.cpp  viewer_node_3d.h
src/nodes/qt/: distribution3d_mesh.hpp  scenemodifier.cpp  scenemodifier.h  viewer_3d_controller.cpp  viewer_3d_controller.h  viewer_3d_model.cpp  viewer_3d_model.h  viewer_3d_renderer.cpp  viewer_3d_renderer.h  viewer_3d_vtk.cpp  viewer_3d_window.cpp  viewer_3d_window.h
src/nodes/qt/ui/: cslibs_mapping_viewer_node_3d.ui  viewer_3d_main_widget.ui  widget.ui
src/publisher/: distributions_publisher.cpp  distributions_publisher.h  occupancy_grid_publisher.cpp  occupancy_grid_publisher.h  octomap_publisher.cpp  octomap_publisher.h  oru_publisher.cpp  oru_publisher.h  pointcloud_publisher.cpp  pointcloud_publisher.h
src/rviz/: ndt_circles_3d.cpp  ndt_circles_3d.h  ndt_display_3d.cpp  ndt_display_3d.h  ndt_ellipsoid_3d.cpp  ndt_ellipsoid_3d.h  ndt_map_loader_3d.cpp  ndt_map_loader_3d.h  ndt_mesh_3d.cpp  ndt_mesh_3d.h  ndt_visual_3d.cpp  ndt_visual_3d.h
srv/: SaveMap.srv
