<?xml version="1.0"?>
<package format="2">
  <name>cslibs_mapping</name>
  <version>0.0.1</version>
  <description>The cslibs_mapping package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_gridmaps</depend>
  <depend>cslibs_time</depend>
  <depend>cslibs_utility</depend>
  <depend>cslibs_math_ros</depend>
  <depend>cslibs_ndt_3d</depend>
  <depend>cslibs_ndt_2d</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <depend>rviz</depend>
  <depend>yaml-cpp</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
